tests/should_fail/type_hof_closure_wrong_param.nv
module main

// SHOULD FAIL: higher-order function receives closure with wrong parameter type
// expects fn(Int) -> Int but gets fn(String) -> Int
fn apply(f: fn(Int) -> Int, x: Int) -> Int {
    return f(x)
}

let result = apply(|s: String| 0, 5)
println(result)
